Completed Logout Function

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,14 @@ main {
   padding: 0;
 }
 
+.main-header__item button {
+  color: #363537;
+  background-color: #FBFEF9;
+  padding: 0 0.3rem 0.2rem 0.3rem;
+  margin: 0 0.5rem 0 0.5rem;
+  border-radius: 5px;
+}
+
 .main-header__item a {
   text-decoration: none;
   color: #FBFEF9;
