--- a/views/musician/profile.ejs
+++ b/views/musician/profile.ejs
@@ -10,6 +10,7 @@
 -->
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/css/main.css">
     </head>
 
     <body>
