--- a/views/admin/edit-profile.ejs
+++ b/views/admin/edit-profile.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/head.ejs') %>
 
+<link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/forms.css">
-<link rel="stylesheet" href="/css/product.css">
     
 </head>
 
