--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -17,6 +17,9 @@
 			<li class="main-header__item">
 				<a class="<%= path === '/profile' ? 'active' : '' %>" href="/profile">Profile</a>
 			</li>
+            <li class="main-header__item">
+                <a class="<%= path === '/admin/add-profile' ? 'active' : '' %>" href="/admin/add-profile">Add Profile</a>
+            </li>
 			<% } %>
 			<% if (!isAuthenticated) { %> <!-- says "only show the following if not (!) Authenticated" -->
             <li class="main-header__item">
@@ -51,6 +54,9 @@
 		<% if (isAuthenticated) { %>
 		<li class="mobile-nav__item">
 			<a class="<%= path === '/profile' ? 'active' : '' %>" href="/profile">Profile</a>
+		</li>
+		<li class="main-header__item">
+			<a class="<%= path === '/admin/add-profile' ? 'active' : '' %>" href="/admin/add-profile">Add Profile</a>
 		</li>
 		<% } %>
 		<% if (!isAuthenticated) { %>
