Create User_ID Association in Musician Profile

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -9,6 +9,7 @@
 		</ul>
 		<ul class="main-header__item-list">
 			<li class="main-header__item">
+				<!-- this says that if the path is === to '/' then mark the class active, else mark it blank ''. The ? stands for if and the : stands for else. -->
 				<a class="<%= path === '/' ? 'active' : '' %>" href="/">Search</a>
 			</li>
 		</ul>
