--- a/views/musician/profile.ejs
+++ b/views/musician/profile.ejs
@@ -26,8 +26,8 @@
                 </div>
                 <div class="user-data">
                     <h3>Instrument:</h3><p><%= musician.instrument %></p>
-                    <h3>Address:</h3><p><%= musician.address %></p>
                     <h3>City:</h3><p><%= musician.city %></p>
+                    <h3>Country:</h3><p><%= musician.country %></p>
                 </div>
                 
 
