Changed variable names for greater consistency. Fixed an issue where database access failed on search page.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,10 +35,10 @@
                         </details>
                         <details>
                             <summary>Search for vocals:</summary>
-                            <input class="form-control" type="checkbox" name="lead_vocals" class="search-box__checkbox" id="lead_vocals">
-                            <label class="form-control" for="lead_vocals">Lead vocals</label>
-                            <input class="form-control" type="checkbox" name="backup_vocals" class="search-box__checkbox" id="backup_vocals">
-                            <label class="form-control" for="backup_vocals">Backup vocals</label>
+                            <input class="form-control" type="checkbox" name="leadVocals" class="search-box__checkbox" id="leadVocals">
+                            <label class="form-control" for="leadVocals">Lead vocals</label>
+                            <input class="form-control" type="checkbox" name="backupVocals" class="search-box__checkbox" id="backupVocals">
+                            <label class="form-control" for="backupVocals">Backup vocals</label>
                         </details>
                             <details>
                                 <summary>Search by instrument:</summary>
