added email messaging

--- a/views/includes/contact.ejs
+++ b/views/includes/contact.ejs
@@ -1,1 +1,1 @@
-<a href="/musicians/<%= musician._id %>" class="btn card_actions__button">Contact</a>
+<a href="/message/<%= musician._id %>" class="btn card_actions__button">Contact</a>
