--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -14,6 +14,7 @@
     max-width: 90%;
     margin: auto;
     display: block;
+    align-items: center;
   }
   
   .form-control {
@@ -24,7 +25,7 @@
   .form-control input,
   .form-control textarea {
     display: block;
-    width: 100%;
+    width: 50%;
     margin-bottom: 0.25rem;
     height: 2rem;
     padding: 0 0.5rem;
@@ -51,6 +52,10 @@
   .form-control textarea:focus {
     border: 0.2rem solid #363537;
     transition: all 0.5s ease;
+  }
+
+  .form-control img {
+    max-width: 30%;
   }
   
   .form-control input.invalid,
