--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
                 <div class="search-box__filters">
                     <form action="/search" method="post">
                         <!-- <input class="form-control" type="text" placeholder="Search by keyword" name="keyword"> -->
+                            <label class="form-control" for="firstName">City: </label>
                             <input class="form-control" type="text" placeholder="City name" name="city">
                             <label class="form-control" for="firstName">First name: </label>
                             <input type="text" name="firstName" placeholder="Search by first name">
